@@ -210,3 +210,8 @@ Bit	Value	Function
 ...
 
 Deberia mirar ese bit esta a 1 para poner el contador a 0?
+
+-debug cpu. parece que desde el cambio de gestion step to step (con setting disable cpu emulation) ahora al poner un breakpoint
+en 38H, y darle enter en modo step, casi nunca avanza de esa direccion (porque salta de nuevo el breakpoint)
+
+-listado de breakpoints: que liste mas alla de 10 (que salga hasta el ultimo definido)
