@@ -9,7 +9,9 @@ Added setting to disable TZX pauses
 Added zsf to scr support for Next, ZX-Uno and TSConf snapshots
 Added Jupiter Ace 51 KB RAM emulation
 
-Improved Debugging: now you can render any image from a Speccy Text Adventure (supported parsers: Quill, Paws, Daad, Gac)
+Improved Debugging: 
+-Now you can render any image from a Speccy Text Adventure (supported parsers: Quill, Paws, Daad, Gac)
+-Mouse accions: click (toggle breakpoint, change registers), Scroll up/down by using the mouse wheel
 
 Improved ZX Vision menu interface:
 -Added setting to pause cpu emulation on menu when multitask active
